force-app/main/default/objects/Stripe_Webhook__c/Stripe_Webhook__c.object-meta.xml
<CustomObject>
    <label>Stripe Webhook</label>
    <nameField>
        <label>Stripe Webhook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Webhooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>