force-app/main/default/objects/Stripe_Webhook__c/fields/Webhook_Data__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Data__c</fullName>
    <label>Webhook Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>