force-app/main/default/objects/Stripe_Webhook__c/fields/Webhook_Type__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Type__c</fullName>
    <label>Webhook Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>